Started adding some styles for mobile-first layout

--- a/index.html
+++ b/index.html
@@ -3,58 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Racing Louisville FC Starting 11</title>
 </head>
 <body>
     <header>
-        <h1>Racing Lousville FC Starting 11</h1>
-        <p>Build your strating 11 for the next matchup</p>
+        <h1>Racing Lousville FC</h1>
+        <p>My starting 11:</p>
     </header>
 
     <div class="lineup">
         <div class="player">
-            <span class="player-position">GK</span>
-            <span class="player-name">Player 1</span>
+            <div class="player-position">GK</div>
+            <div class="player-name">Player 1</div>
         </div>
         <div class="player">
-            <span class="player-position">D</span>
-            <span class="player-name">Player 2</span>
+            <div class="player-position">D</div>
+            <div class="player-name">Player 2</div>
         </div>
         <div class="player">
-            <span class="player-position">D</span>
-            <span class="player-name">Player 3</span>
+            <div class="player-position">D</div>
+            <div class="player-name">Player 3</div>
         </div>
         <div class="player">
-            <span class="player-position">D</span>
-            <span class="player-name">Player 4</span>
+            <div class="player-position">D</div>
+            <div class="player-name">Player 4</div>
         </div>
         <div class="player">
-            <span class="player-position">D</span>
-            <span class="player-name">Player 5</span>
+            <div class="player-position">D</div>
+            <div class="player-name">Player 5</div>
         </div>
         <div class="player">
-            <span class="player-position">M</span>
-            <span class="player-name">Player 6</span>
+            <div class="player-position">M</div>
+            <div class="player-name">Player 6</div>
         </div>
         <div class="player">
-            <span class="player-position">M</span>
-            <span class="player-name">Player 7</span>
+            <div class="player-position">M</div>
+            <div class="player-name">Player 7</div>
         </div>
         <div class="player">
-            <span class="player-position">M</span>
-            <span class="player-name">Player 8</span>
+            <div class="player-position">M</div>
+            <div class="player-name">Player 8</div>
         </div>
         <div class="player">
-            <span class="player-position">M</span>
-            <span class="player-name">Player 9</span>
+            <div class="player-position">M</div>
+            <div class="player-name">Player 9</div>
         </div>
         <div class="player">
-            <span class="player-position">F</span>
-            <span class="player-name">Player 10</span>
+            <div class="player-position">F</div>
+            <div class="player-name">Player 10</div>
         </div>
         <div class="player">
-            <span class="player-position">F</span>
-            <span class="player-name">Player 11</span>
+            <div class="player-position">F</div>
+            <div class="player-name">Player 11</div>
         </div>
     </div>
 
