--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="player">
             <div class="player-position">GK</div>
             <div class="player-name">Player 1</div>
+            <div class="player-photo"><img src="https://placekitten.com/200/200"></div>
         </div>
         <div class="player">
             <div class="player-position">D</div>
