--- a/index.html
+++ b/index.html
@@ -16,47 +16,79 @@
         <div class="player">
             <div class="player-position">GK</div>
             <div class="player-name">Player 1</div>
-            <div class="player-photo"><img src="https://placekitten.com/200/200"></div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">D</div>
             <div class="player-name">Player 2</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">D</div>
             <div class="player-name">Player 3</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">D</div>
             <div class="player-name">Player 4</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">D</div>
             <div class="player-name">Player 5</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">M</div>
             <div class="player-name">Player 6</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">M</div>
             <div class="player-name">Player 7</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">M</div>
             <div class="player-name">Player 8</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">M</div>
             <div class="player-name">Player 9</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">F</div>
             <div class="player-name">Player 10</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
         <div class="player">
             <div class="player-position">F</div>
             <div class="player-name">Player 11</div>
+            <div class="player-photo">
+                <img src="http://placekitten.com/200/200">
+            </div>
         </div>
     </div>
 
