Added divs to seperate players into positions.

--- a/index.html
+++ b/index.html
@@ -12,88 +12,107 @@
         <p>My starting 11:</p>
     </header>
 
-    <div class="lineup">
-        <div class="player">
-            <div class="player-position">GK</div>
-            <div class="player-name">Player 1</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
+    <form class="lineup">
+        <div class="keepers">
+            <div class="player">
+                <div class="position">GK</div>
+                <div class="name">Michelle Betos</div>
+                <div class="hometown">New York City, NY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
             </div>
         </div>
-        <div class="player">
-            <div class="player-position">D</div>
-            <div class="player-name">Player 2</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
+        <div class="defenders">
+            <div class="player">
+                <div class="position">D</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
+            </div>
+            <div class="player">
+                <div class="position">D</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
+            </div>
+            <div class="player">
+                <div class="position">D</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
+            </div>
+            <div class="player">
+                <div class="position">D</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
             </div>
         </div>
-        <div class="player">
-            <div class="player-position">D</div>
-            <div class="player-name">Player 3</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
+        <div class="midfielders">
+            <div class="player">
+                <div class="position">M</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
+            </div>
+            <div class="player">
+                <div class="position">M</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
+            </div>
+            <div class="player">
+                <div class="position">M</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
+            </div>
+            <div class="player">
+                <div class="position">M</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
             </div>
         </div>
-        <div class="player">
-            <div class="player-position">D</div>
-            <div class="player-name">Player 4</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
+        <div class="forwards">
+            <div class="player">
+                <div class="position">F</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
+            </div>
+            <div class="player">
+                <div class="position">F</div>
+                <div class="name">Player 1</div>
+                <div class="hometown">Louisville, KY</div>
+                <div class="photo">
+                    <img src="http://placekitten.com/200/200">
+                </div>
             </div>
         </div>
-        <div class="player">
-            <div class="player-position">D</div>
-            <div class="player-name">Player 5</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
-            </div>
-        </div>
-        <div class="player">
-            <div class="player-position">M</div>
-            <div class="player-name">Player 6</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
-            </div>
-        </div>
-        <div class="player">
-            <div class="player-position">M</div>
-            <div class="player-name">Player 7</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
-            </div>
-        </div>
-        <div class="player">
-            <div class="player-position">M</div>
-            <div class="player-name">Player 8</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
-            </div>
-        </div>
-        <div class="player">
-            <div class="player-position">M</div>
-            <div class="player-name">Player 9</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
-            </div>
-        </div>
-        <div class="player">
-            <div class="player-position">F</div>
-            <div class="player-name">Player 10</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
-            </div>
-        </div>
-        <div class="player">
-            <div class="player-position">F</div>
-            <div class="player-name">Player 11</div>
-            <div class="player-photo">
-                <img src="http://placekitten.com/200/200">
-            </div>
-        </div>
-    </div>
+    </form>
 
     <footer>
-        <p>Created by Jestin Mounts</p>
+        Created by Jestin Mounts
     </footer>
 
     
