Fixed typo in header and added max height for lineup div to not exceed viewport height.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Racing Lousville FC</h1>
+        <h1>Racing Louisville FC</h1>
         <p>My starting 11:</p>
     </header>
 
