Removed divs that seperate players into positions. Would like to try sepearting lines using wrap properties instead. This may be easier to adjust down the line.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <p>My starting 11:</p>
     </header>
 
-    <form class="lineup">
-        <div class="keepers">
+    <div class="lineup">
             <div class="player">
                 <div class="position">GK</div>
                 <div class="name">Michelle Betos</div>
@@ -22,8 +21,6 @@
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-        </div>
-        <div class="defenders">
             <div class="player">
                 <div class="position">D</div>
                 <div class="name">Player 1</div>
@@ -56,8 +53,6 @@
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-        </div>
-        <div class="midfielders">
             <div class="player">
                 <div class="position">M</div>
                 <div class="name">Player 1</div>
@@ -90,8 +85,6 @@
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-        </div>
-        <div class="forwards">
             <div class="player">
                 <div class="position">F</div>
                 <div class="name">Player 1</div>
@@ -109,7 +102,6 @@
                 </div>
             </div>
         </div>
-    </form>
 
     <footer>
         Created by Jestin Mounts
