--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <div class="lineup">
-            <div class="player">
+            <div class="player" id="player-1">
                 <div class="position">GK</div>
                 <div class="name">Michelle Betos</div>
                 <div class="hometown">New York City, NY</div>
@@ -21,81 +21,81 @@
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-2">
                 <div class="position">D</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 2</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-3">
                 <div class="position">D</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 3</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-4">
                 <div class="position">D</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 4</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-5">
                 <div class="position">D</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 5</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-6">
                 <div class="position">M</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 6</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-7">
                 <div class="position">M</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 7</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-8">
                 <div class="position">M</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 8</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-9">
                 <div class="position">M</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 9</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-10">
                 <div class="position">F</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 10</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
                 </div>
             </div>
-            <div class="player">
+            <div class="player" id="player-11">
                 <div class="position">F</div>
-                <div class="name">Player 1</div>
+                <div class="name">Player 11</div>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
