Created players.js containing player objects and player-selector.js to generate drop-down menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="lineup">
             <div class="player" id="player-1">
                 <div class="position">GK</div>
-                <div class="name">Michelle Betos</div>
+                <select class="name" id='player-1' name='player-1'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">New York City, NY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -107,6 +109,7 @@
         Created by Jestin Mounts
     </footer>
 
-    
+    <script src="js/players.js"></script>
+    <script src="js/player-selector.js"></script> 
 </body>
 </html>
