Added drop-down menus to all players. player-selector.js only generating content for first.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="lineup">
             <div class="player" id="player-1">
                 <div class="position">GK</div>
-                <select class="name" id='player-1' name='player-1'>
+                <select class="name" id='player-1-name' name='player-1-name'>
                     <!-- Use JS to insert player options here -->
                 </select>
                 <div class="hometown">New York City, NY</div>
@@ -25,7 +25,9 @@
             </div>
             <div class="player" id="player-2">
                 <div class="position">D</div>
-                <div class="name">Player 2</div>
+                <select class="name" id='player-2-name' name='player-2-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -33,7 +35,9 @@
             </div>
             <div class="player" id="player-3">
                 <div class="position">D</div>
-                <div class="name">Player 3</div>
+                <select class="name" id='player-3-name' name='player-3-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -41,7 +45,9 @@
             </div>
             <div class="player" id="player-4">
                 <div class="position">D</div>
-                <div class="name">Player 4</div>
+                <select class="name" id='player-4-name' name='player-4-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -49,7 +55,9 @@
             </div>
             <div class="player" id="player-5">
                 <div class="position">D</div>
-                <div class="name">Player 5</div>
+                <select class="name" id='player-5-name' name='player-5-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -57,7 +65,9 @@
             </div>
             <div class="player" id="player-6">
                 <div class="position">M</div>
-                <div class="name">Player 6</div>
+                <select class="name" id='player-6-name' name='player-6-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -65,7 +75,9 @@
             </div>
             <div class="player" id="player-7">
                 <div class="position">M</div>
-                <div class="name">Player 7</div>
+                <select class="name" id='player-7-name' name='player-7-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -73,7 +85,9 @@
             </div>
             <div class="player" id="player-8">
                 <div class="position">M</div>
-                <div class="name">Player 8</div>
+                <select class="name" id='player-8-name' name='player-8-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -81,7 +95,9 @@
             </div>
             <div class="player" id="player-9">
                 <div class="position">M</div>
-                <div class="name">Player 9</div>
+                <select class="name" id='player-9-name' name='player-9-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -89,7 +105,9 @@
             </div>
             <div class="player" id="player-10">
                 <div class="position">F</div>
-                <div class="name">Player 10</div>
+                <select class="name" id='player-10-name' name='player-10-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
@@ -97,7 +115,9 @@
             </div>
             <div class="player" id="player-11">
                 <div class="position">F</div>
-                <div class="name">Player 11</div>
+                <select class="name" id='player-11-name' name='player-11-name'>
+                    <!-- Use JS to insert player options here -->
+                </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
                     <img src="http://placekitten.com/200/200">
