Created loop that returns value when new player is selected from drop-down using addEventListener

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="lineup">
             <div class="player" id="player-1">
                 <div class="position">GK</div>
-                <select class="name" id='player-1-name' name='player-1-name'>
+                <select class="name" id='player-1-name' name='player-1-name' onchange="">
                     <!-- Use JS to insert player options here -->
                 </select>
                 <div class="hometown">New York City, NY</div>
@@ -131,5 +131,6 @@
 
     <script src="js/players.js"></script>
     <script src="js/player-selector.js"></script> 
+    <script src="js/player-changer.js"></script> 
 </body>
 </html>
