--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </select>
                 <div class="hometown">New York City, NY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/500/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
             <div class="player" id="player-2">
@@ -30,7 +30,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg"">
                 </div>
             </div>
             <div class="player" id="player-3">
@@ -40,7 +40,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
             <div class="player" id="player-4">
@@ -50,7 +50,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
             <div class="player" id="player-5">
@@ -60,7 +60,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
             <div class="player" id="player-6">
@@ -70,7 +70,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
             <div class="player" id="player-7">
@@ -80,7 +80,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
             <div class="player" id="player-8">
@@ -90,7 +90,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
             <div class="player" id="player-9">
@@ -100,7 +100,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
             <div class="player" id="player-10">
@@ -110,7 +110,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
             <div class="player" id="player-11">
@@ -120,7 +120,7 @@
                 </select>
                 <div class="hometown">Louisville, KY</div>
                 <div class="photo">
-                    <img src="http://placekitten.com/200/200">
+                    <img src="img/racinglogo.svg">
                 </div>
             </div>
         </div>
