Altered formation function to take 4 arguments and adjust formation based on those

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </header>
 
     <div class="formation-select">
-        <button type="button" autofocus>4-4-2</button>
-        <button type="button" onclick="changeFormation()">4-3-3</button>
-        <button type="button">4-2-3-1</button>
+        <button type="button" onclick="changeFormation(4,0,4,2)">4-4-2</button>
+        <button type="button" onclick="changeFormation(4,0,3,3)">4-3-3</button>
+        <button type="button" onclick="changeFormation(4,2,3,1)">4-2-3-1</button>
     </div>
 
     <div class="lineup">
