--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <button type="button" onclick="changeFormation(4,0,4,2)">4-4-2</button>
             <button type="button" onclick="changeFormation(4,0,3,3)">4-3-3</button>
             <button type="button" onclick="changeFormation(4,2,3,1)">4-2-3-1</button>
+            <button type="button" onclick="changeFormation(3,0,4,3)">3-4-3</button>
+            <button type="button" onclick="changeFormation(3,2,3,2)">3-2-3-2</button>
         </div>
     </header>
 
