Added pop-up box to display html2canvas image. Need to make image resize to fit on page better.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         </div>
     </header>
 
+    <div id="screenshotContainer">
+        <span class="close" onclick="closeScreenshot()">&times;</span>
+        <div id="lineupImage">
+            <!-- Image of Lineup will be inserted here with JS -->
+        </div>
+    </div>
+
     <div class="lineup" id="lineup">
             <div class="player" id="player-1">
                 <div class="position">GK</div>
