Commented out Styles and HTML for screenshot feature. May revisit later

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Racing Louisville FC Starting 11</title>
-    <script src="js/html2canvas.js"></script>
-    <script src="js/screenshot.js"></script>
+    <!-- <script src="js/html2canvas.js"></script>
+    <script src="js/screenshot.js"></script> -->
 </head>
 <body>
     <header>
@@ -19,17 +19,20 @@
             <button type="button" onclick="changeFormation(3,0,4,3)">3-4-3</button>
             <button type="button" onclick="changeFormation(3,2,3,2)">3-2-3-2</button>
         </div>
-        <div class="capture">
+        <!-- Button for Screenshot -->
+        <!-- <div class="capture">
             <button type="button" onclick="screenshot()">Capture</button>
-        </div>
+        </div> -->
     </header>
 
-    <div id="screenshotContainer">
+    <!-- Lightbox for screen Shot -->
+
+    <!-- <div id="screenshotContainer">
         <span class="close" onclick="closeScreenshot()">&times;</span>
         <div id="lineupImage">
-            <!-- Image of Lineup will be inserted here with JS -->
+           
         </div>
-    </div>
+    </div> -->
 
     <div class="lineup" id="lineup">
             <div class="player" id="player-1">
