Replaced setupPlayerPosition calls with a forEach loop to shorten code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Racing Louisville FC</h1>
         <div class="formation-select">
             <p>Select Formation:</p>
-            <button type="button" onclick="changeFormation(4,0,4,2)">4-4-2</button>
+            <button type="button" onclick="changeFormation(4,0,4,2)" disabled>4-4-2</button>
             <button type="button" onclick="changeFormation(4,0,3,3)">4-3-3</button>
             <button type="button" onclick="changeFormation(4,2,3,1)">4-2-3-1</button>
             <button type="button" onclick="changeFormation(3,0,4,3)">3-4-3</button>
