More edits to screenshot feature

--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
     <header>
         <h1>Racing Louisville FC</h1>
         <!-- Button for Screenshot -->
-        <!-- <div class="capture">
+        <div class="capture">
             <button type="button" onclick="screenshot()">Capture</button>
-        </div> -->
+        </div>
     </header>
 
     <!-- Lightbox for screen Shot -->
 
-    <!-- <div id="screenshotContainer">
+    <div id="screenshotContainer">
         <span class="close" onclick="closeScreenshot()">&times;</span>
-        <div id="lineupImage">
-           
-        </div>
-    </div> -->
+        <div id="lineupImage">Save an image of your lineup:</div>
+    </div>
 
     <div class="formation-select">
         <h2>Select Formation:</h2>
@@ -154,7 +152,7 @@
     <script src="js/player-selector.js"></script> 
     <script src="js/player-changer.js"></script> 
     <script src="js/formations.js"></script>
-        <!-- <script src="js/html2canvas.js"></script>
-    <script src="js/screenshot.js"></script> -->
+    <script src="js/html2canvas.js"></script>
+    <script src="js/screenshot.js"></script>
 </body>
 </html>
