Added hamburger menu for mobile

--- a/index.html
+++ b/index.html
@@ -9,11 +9,26 @@
 <body>
     <header>
         <h1>Racing Louisville FC</h1>
-        <!-- Button for Screenshot -->
-        <div class="capture">
-            <button type="button" onclick="screenshot()">Capture</button>
+
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
+
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Roster</a></li>
+                <li><a href="#">LineUp Creator</a></li>
+            </ul>
+        </nav>
+
     </header>
+    <!-- Button to execute HTML2Canvas -->
+    <div class="capture">
+        <button type="button" onclick="screenshot()">Capture</button>
+    </div>
 
     <!-- Lightbox for screen Shot -->
 
