Hamburger Menu working

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Racing Louisville FC</h1>
+        <div class="mobile-banner">
+            <h1>Racing Louisville FC</h1>
 
-        <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
 
         <nav>
@@ -157,5 +159,6 @@
     <script src="js/player-selector.js"></script> 
     <script src="js/player-changer.js"></script> 
     <script src="js/formations.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 </html>
