Added nav into banner on larger screens

--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         </div>
 
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Roster</a></li>
-                <li><a href="#">LineUp Creator</a></li>
-            </ul>
+            <a href="#">Home</a>
+            <a href="#">Roster</a>
+            <a href="#">LineUp Creator</a>
         </nav>
 
     </header>
