--- a/roster.html
+++ b/roster.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="roster">
-        <div id="forwards"></div>
+        <div id="forwards"><h1>Forwards</h1></div>
         <div id="midfielders"></div>
         <div id="defenders"></div>
         <div id="goalkeepers"></div>
