Started CSS over to be mobile first. Changed JS script to toggle CSS class to open elements

--- a/roster.html
+++ b/roster.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="roster">
-        <div id="forwards"></div>
+        <div id="forwards"><h2>Forwards</h2></div>
         <div id="midfielders"></div>
         <div id="defenders"></div>
         <div id="goalkeepers"></div>
