--- a/roster.html
+++ b/roster.html
@@ -10,6 +10,25 @@
 </head>
 <body>
 
+    <header>
+        <div class="mobile-banner">
+            <h1>Racing Louisville FC</h1>
+
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Roster</a>
+            <a href="#">LineUp Creator</a>
+        </nav>
+
+    </header>
+
     <main id="roster">
         <div class="position-box">
             <h2 onclick="generatePlayers(forwards, forwardsDiv)">Forwards <span class="symbol">+</span></h2>
@@ -34,5 +53,6 @@
    
 <script src="js/players.js"></script>
 <script src="js/roster.js"></script>
+<script src="js/nav.js"></script>
 </body>
 </html>
