Added links to nav bar

--- a/roster.html
+++ b/roster.html
@@ -22,9 +22,9 @@
         </div>
 
         <nav>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">Roster</a>
-            <a href="#">LineUp Creator</a>
+            <a href="lineup.html">LineUp Creator</a>
         </nav>
 
     </header>
