--- a/lineup.html
+++ b/lineup.html
@@ -20,8 +20,8 @@
         </div>
 
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Roster</a>
+            <a href="index.html">Home</a>
+            <a href="roster.html">Roster</a>
             <a href="#">LineUp Creator</a>
         </nav>
 
