--- a/lineup.html
+++ b/lineup.html
@@ -150,7 +150,7 @@
         </div>
 
     <footer>
-        Page created by Jestin Mounts. Not associated with Racing Louisville FC or the NWSL
+        Page created by Jestin Mounts. Not associated with Racing Louisville FC or the NWSL. Player images and logo property of Soccer Holdings, LLC.
     </footer>
 
     <script src="js/players.js"></script>
