--- a/roster.html
+++ b/roster.html
@@ -49,6 +49,10 @@
             <div id="goalkeepers" class="players-container"></div>
         </div>
     </main>
+
+    <footer>
+        Page created by Jestin Mounts. Not associated with Racing Louisville FC or the NWSL. Player images and logo property of Soccer Holdings, LLC.
+    </footer>
    
 <script src="js/players.js"></script>
 <script src="js/roster.js"></script>
